tempfile/derive_more/tests/compile_fail/display/wrong_named_parameter.rs
#[derive(derive_more::Display)]
#[display("Stuff({bars})")]
pub struct Foo {
    bar: String,
}

fn main() {}
